Fixes #3897: In MyRestyaboards iOS app, Check the visibility field alignments in boards page issue fixed

--- a/client/css/custom-responsive.less
+++ b/client/css/custom-responsive.less
@@ -579,6 +579,9 @@
 					}
 				}
 			}
+			.admin-boards-visibility-button {
+				width: 66px;
+			}
 		}
 		.dockmodal {
 			bottom: 32px !important;
